# sirius2_manip

./: .gitignore
manip_control/: setup.py
manip_control/arm_joystick_control/: gui.py  joystick_control.py  ros_command_sender.py  ros_joy_receiver.py  utils.py
manip_control/arm_servo/: arm_controller.py  command.py  gui.py  motion_control.py  ros_command_receiver.py  ros_robot_interface.py  ros_visualizer.py  utils.py
manip_control/manip_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
manip_control/robot_urdf/: sirius2_manip.urdf.xacro
manip_control/robot_urdf/sirius2_manip/: meshes
manip_control/ros_middleware/: __init__.py  base.py  ros1.py  ros2.py
ros_ws/src/sirius2_manip/: CMakeLists.txt  package.xml
ros_ws/src/sirius2_manip/config/: manip_visualization.rviz  moteus_driver.yaml  roboszpon_driver.yaml
ros_ws/src/sirius2_manip/launch/: manip_hardware.launch  manip_visualization.launch
ros_ws/src/sirius2_manip/meshes/: GP2.STL  base_assy.STL  global_roll_assembly.STL  gripper.STL  wrist_diff_base.STL  wrist_diff_output.STL
ros_ws/src/sirius2_manip/scripts/: mock_manip.py
ros_ws/src/sirius2_manip/urdf/: sirius2_manip.urdf copy.xacro  sirius2_manip.urdf.xacro
ros_ws/src/sirius_moteus_driver/: CMakeLists.txt  package.xml
ros_ws/src/sirius_moteus_driver/scripts/: driver.py
ros_ws/src/sirius_roboszpon_driver/: CMakeLists.txt  package.xml
ros_ws/src/sirius_roboszpon_driver/msg/: RoboszponStatus.msg
ros_ws/src/sirius_roboszpon_driver/scripts/: driver.py  roboszpon_interface.py
