<?xml version="1.0"?>
<package format="2">
  <name>sirius2_manip</name>
  <version>1.0.0</version>
  <description>Package for controlling sirius2 manip</description>
  <maintainer email="zebromek@gmail.com">Tomek Żebrowski</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>